core-and-webapi/Sylvre.Core/Grammar/ANTLR4Generated/SylvreParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./SylvreParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SylvreParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOUBLE_STRING=1, SINGLE_STRING=2, HASH=3, LEFT_ANGLE_BRACKET=4, RIGHT_ANGLE_BRACKET=5, 
		COMMA=6, FULLSTOP=7, OPEN_PARENTHESIS=8, CLOSE_PARENTHESIS=9, OPEN_SQUARE_BRACKET=10, 
		CLOSE_SQUARE_BRACKET=11, PLUS=12, PLUSEQUALS=13, INCREMENT=14, MINUS=15, 
		MINUSQUALS=16, DECREMENT=17, MULTIPLY=18, MULTIPLYEQUALS=19, DIVIDE=20, 
		DIVIDEDIVIDE=21, DIVIDEEQUALS=22, EQUALSYMBOL=23, USE=24, FILE=25, FUNCTION=26, 
		PARAMS=27, CREATE=28, CALL=29, EXIT=30, WITH=31, IF=32, ELSEIF=33, ELSE=34, 
		LOOPWHILE=35, LOOPFOR=36, AND=37, OR=38, NOT=39, TRUE=40, FALSE=41, GREATER_THAN=42, 
		GREATER_EQUAL=43, LESS_THAN=44, LESS_EQUAL=45, EQUALS=46, IDENTIFIER=47, 
		NUMBER=48, DECIMAL=49, WS=50, COMMENT=51, LINE_COMMENT=52, NEWLINE=53, 
		Unknown=54;
	public const int
		RULE_program = 0, RULE_seperator = 1, RULE_block = 2, RULE_nestable_block = 3, 
		RULE_use_file_statement = 4, RULE_statement_block = 5, RULE_function_block = 6, 
		RULE_if_block = 7, RULE_elseif_block = 8, RULE_else_block = 9, RULE_loopwhile_block = 10, 
		RULE_loopfor_block = 11, RULE_conditional_expression = 12, RULE_comparison_operator = 13, 
		RULE_logical_operator = 14, RULE_bool = 15, RULE_parameters = 16, RULE_arguments = 17, 
		RULE_statement = 18, RULE_declaration = 19, RULE_assignment = 20, RULE_assignment_operator = 21, 
		RULE_array_assignment = 22, RULE_array_elements = 23, RULE_function_call = 24, 
		RULE_function_return = 25, RULE_function_return_value = 26, RULE_expression = 27, 
		RULE_term = 28, RULE_factor = 29, RULE_arithmetic_operator = 30, RULE_string = 31, 
		RULE_variable_reference = 32, RULE_variable_complex_reference = 33, RULE_variable_complex_reference_left = 34, 
		RULE_variable_suffix = 35, RULE_variable_suffix_left = 36, RULE_member_reference = 37, 
		RULE_member_reference_left = 38, RULE_index_reference = 39, RULE_unary_increment = 40, 
		RULE_unary_decrement = 41, RULE_unary_prefix_increment = 42, RULE_unary_prefix_decrement = 43, 
		RULE_unary_suffix_increment = 44, RULE_unary_suffix_decrement = 45;
	public static readonly string[] ruleNames = {
		"program", "seperator", "block", "nestable_block", "use_file_statement", 
		"statement_block", "function_block", "if_block", "elseif_block", "else_block", 
		"loopwhile_block", "loopfor_block", "conditional_expression", "comparison_operator", 
		"logical_operator", "bool", "parameters", "arguments", "statement", "declaration", 
		"assignment", "assignment_operator", "array_assignment", "array_elements", 
		"function_call", "function_return", "function_return_value", "expression", 
		"term", "factor", "arithmetic_operator", "string", "variable_reference", 
		"variable_complex_reference", "variable_complex_reference_left", "variable_suffix", 
		"variable_suffix_left", "member_reference", "member_reference_left", "index_reference", 
		"unary_increment", "unary_decrement", "unary_prefix_increment", "unary_prefix_decrement", 
		"unary_suffix_increment", "unary_suffix_decrement"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'#'", "'<'", "'>'", "','", "'.'", "'('", "')'", "'['", 
		"']'", "'+'", "'+='", "'increment'", "'-'", "'-='", "'decrement'", "'*'", 
		"'*='", "'/'", "'//'", "'/='", "'='", "'USE'", "'FILE'", "'function'", 
		"'PARAMS'", "'create'", "'call'", "'exit'", "'with'", "'if'", "'elseif'", 
		"'else'", "'loopwhile'", "'loopfor'", "'AND'", "'OR'", "'NOT'", "'TRUE'", 
		"'FALSE'", "'GTHAN'", "'GEQUAL'", "'LTHAN'", "'LEQUAL'", "'EQUALS'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOUBLE_STRING", "SINGLE_STRING", "HASH", "LEFT_ANGLE_BRACKET", 
		"RIGHT_ANGLE_BRACKET", "COMMA", "FULLSTOP", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", 
		"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "PLUS", "PLUSEQUALS", "INCREMENT", 
		"MINUS", "MINUSQUALS", "DECREMENT", "MULTIPLY", "MULTIPLYEQUALS", "DIVIDE", 
		"DIVIDEDIVIDE", "DIVIDEEQUALS", "EQUALSYMBOL", "USE", "FILE", "FUNCTION", 
		"PARAMS", "CREATE", "CALL", "EXIT", "WITH", "IF", "ELSEIF", "ELSE", "LOOPWHILE", 
		"LOOPFOR", "AND", "OR", "NOT", "TRUE", "FALSE", "GREATER_THAN", "GREATER_EQUAL", 
		"LESS_THAN", "LESS_EQUAL", "EQUALS", "IDENTIFIER", "NUMBER", "DECIMAL", 
		"WS", "COMMENT", "LINE_COMMENT", "NEWLINE", "Unknown"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SylvreParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SylvreParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SylvreParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SylvreParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SylvreParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 92;
				block();
				}
				}
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 140846825619456L) != 0) );
			State = 97;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SeperatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASH() { return GetToken(SylvreParser.HASH, 0); }
		public SeperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_seperator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterSeperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitSeperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSeperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SeperatorContext seperator() {
		SeperatorContext _localctx = new SeperatorContext(Context, State);
		EnterRule(_localctx, 2, RULE_seperator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(HASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Use_file_statementContext use_file_statement() {
			return GetRuleContext<Use_file_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_blockContext function_block() {
			return GetRuleContext<Function_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_blockContext if_block() {
			return GetRuleContext<If_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Elseif_blockContext[] elseif_block() {
			return GetRuleContexts<Elseif_blockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Elseif_blockContext elseif_block(int i) {
			return GetRuleContext<Elseif_blockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Else_blockContext else_block() {
			return GetRuleContext<Else_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Loopwhile_blockContext loopwhile_block() {
			return GetRuleContext<Loopwhile_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Loopfor_blockContext loopfor_block() {
			return GetRuleContext<Loopfor_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Statement_blockContext statement_block() {
			return GetRuleContext<Statement_blockContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case USE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 101;
				use_file_statement();
				}
				break;
			case FUNCTION:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102;
				function_block();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 103;
				if_block();
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ELSEIF) {
					{
					{
					State = 104;
					elseif_block();
					}
					}
					State = 109;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ELSE) {
					{
					State = 110;
					else_block();
					}
				}

				}
				break;
			case LOOPWHILE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 113;
				loopwhile_block();
				}
				break;
			case LOOPFOR:
				EnterOuterAlt(_localctx, 5);
				{
				State = 114;
				loopfor_block();
				}
				break;
			case INCREMENT:
			case DECREMENT:
			case CREATE:
			case CALL:
			case EXIT:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 6);
				{
				State = 115;
				statement_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Nestable_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public If_blockContext if_block() {
			return GetRuleContext<If_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Elseif_blockContext[] elseif_block() {
			return GetRuleContexts<Elseif_blockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Elseif_blockContext elseif_block(int i) {
			return GetRuleContext<Elseif_blockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Else_blockContext else_block() {
			return GetRuleContext<Else_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Loopwhile_blockContext loopwhile_block() {
			return GetRuleContext<Loopwhile_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Loopfor_blockContext loopfor_block() {
			return GetRuleContext<Loopfor_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Statement_blockContext statement_block() {
			return GetRuleContext<Statement_blockContext>(0);
		}
		public Nestable_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nestable_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterNestable_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitNestable_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNestable_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Nestable_blockContext nestable_block() {
		Nestable_blockContext _localctx = new Nestable_blockContext(Context, State);
		EnterRule(_localctx, 6, RULE_nestable_block);
		int _la;
		try {
			State = 131;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
				EnterOuterAlt(_localctx, 1);
				{
				State = 118;
				if_block();
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ELSEIF) {
					{
					{
					State = 119;
					elseif_block();
					}
					}
					State = 124;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ELSE) {
					{
					State = 125;
					else_block();
					}
				}

				}
				break;
			case LOOPWHILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128;
				loopwhile_block();
				}
				break;
			case LOOPFOR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129;
				loopfor_block();
				}
				break;
			case INCREMENT:
			case DECREMENT:
			case CREATE:
			case CALL:
			case EXIT:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 4);
				{
				State = 130;
				statement_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Use_file_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(SylvreParser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILE() { return GetToken(SylvreParser.FILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SeperatorContext seperator() {
			return GetRuleContext<SeperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_STRING() { return GetToken(SylvreParser.SINGLE_STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE_STRING() { return GetToken(SylvreParser.DOUBLE_STRING, 0); }
		public Use_file_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_use_file_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterUse_file_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitUse_file_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUse_file_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Use_file_statementContext use_file_statement() {
		Use_file_statementContext _localctx = new Use_file_statementContext(Context, State);
		EnterRule(_localctx, 8, RULE_use_file_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			Match(USE);
			State = 134;
			Match(FILE);
			State = 135;
			_la = TokenStream.LA(1);
			if ( !(_la==DOUBLE_STRING || _la==SINGLE_STRING) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 136;
			seperator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SeperatorContext seperator() {
			return GetRuleContext<SeperatorContext>(0);
		}
		public Statement_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterStatement_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitStatement_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_blockContext statement_block() {
		Statement_blockContext _localctx = new Statement_blockContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			statement();
			State = 139;
			seperator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNCTION() { return GetToken(SylvreParser.FUNCTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Variable_referenceContext variable_reference() {
			return GetRuleContext<Variable_referenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_ANGLE_BRACKET() { return GetToken(SylvreParser.LEFT_ANGLE_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_ANGLE_BRACKET() { return GetToken(SylvreParser.RIGHT_ANGLE_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAMS() { return GetToken(SylvreParser.PARAMS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Nestable_blockContext[] nestable_block() {
			return GetRuleContexts<Nestable_blockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Nestable_blockContext nestable_block(int i) {
			return GetRuleContext<Nestable_blockContext>(i);
		}
		public Function_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.EnterFunction_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISylvreParserListener typedListener = listener as ISylvreParserListener;
			if (typedListener != null) typedListener.ExitFunction_block(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISylvreParserVisitor<TResult> typedVisitor = visitor as ISylvreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_blockContext function_block() {
		Function_blockContext _localctx = new Function_blockContext(Context, State);
		EnterRule(_localctx, 12, RULE_function_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(FUNCTION);
			State = 142;
			variable_reference();
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PARAMS) {
				{
				State = 143;
				Match(PARAMS);
				State = 144;
				parameters();
				}
			}

			State = 147;
			Match(LEFT_ANGLE_BRACKET);
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140846741733376L) != 0)) {
				{
				{
				State = 148;
				nestable_block();
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 154;
			Match(RIGHT_ANGLE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
